--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Grid Portfolio</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaquery.css">
 </head>
 <body>
     <div class="container">
